<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/tag1"
            android:checked="false"
            android:icon="@drawable/nav_reward"
            android:title="@string/tag1" />

        <item
            android:id="@+id/tag2"
            android:checked="false"
            android:icon="@drawable/nav_ewaste"
            android:title="@string/tag2" />


        <item
            android:id="@+id/tag3"
            android:checked="false"
            android:icon="@drawable/nav_help"
            android:title="@string/tag3" />

        <item
            android:id="@+id/tag4"
            android:checked="false"
            android:icon="@drawable/nav_support"
            android:title="@string/tag4" />


        <item
            android:id="@+id/tag5"
            android:checked="false"
            android:icon="@drawable/nav_setting"
            android:title="@string/tag5" />


    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
            <item
                android:id="@+id/tag6"
                android:checked="false"
                android:icon="@drawable/ratethisapp"
                android:title="@string/tagBottom1" />

        <item
            android:id="@+id/tag7"
            android:checked="false"
            android:icon="@drawable/logout"
            android:title="@string/tagBottom2" />
    </group>
</menu>